# CiteVerify

./: .env  .gitignore  pyproject.toml  pytest.ini  readme.md  requirements.txt
backend/: __init__.py
output/: converted_document.md  verification_report_2509.24592_20260203_170315.json  verification_report_2509.24592_20260203_175709.json  verification_report_2509.24592_20260203_193900.json  verification_report_2509.24592_20260203_202339.json  verification_report_2509.24592_20260203_205135.json  北京工业大学专业学位研究生.md
output/apa/: author_year.md  numbered_bracket.md  numbered_dot.md  numbered_paren.md
output/chicago/: author_year.md  numbered_bracket.md  numbered_dot.md  numbered_paren.md
output/gb_t_7714/: author_year.md  numbered_bracket.md  numbered_dot.md  numbered_paren.md
output/harvard/: author_year.md  numbered_bracket.md  numbered_dot.md  numbered_paren.md
output/ieee/: author_year.md  numbered_bracket.md  numbered_dot.md  numbered_paren.md
output/mla/: author_year.md  numbered_bracket.md  numbered_dot.md  numbered_paren.md
output/vancouver/: author_year.md  numbered_bracket.md  numbered_dot.md  (+1 more)
scripts/: generate_sample_references.py
src/: __init__.py
tests/: test_api_abstract.py  test_citation_extractor.py  test_citation_matcher.py  test_enhanced_pipeline.py  test_full_verification.py  test_matching_debug.py  test_pdf_to_md_save.py  test_pdf_to_references.py  test_reference_checker.py  test_reference_extraction_validation.py  test_relevance_analyzer.py  test_search_strategies.py  test_semantic_scholar_search.py
web-ui/: .gitkeep  app.py
(+121 files in other folders)
