[project]
name = "citeverify"
version = "0.1.0"
description = ""
authors = [
    {name = "renming0207",email = "1823591101@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "albumentations (>=2.0.8,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "magic-pdf (>=1.3.12,<2.0.0)",
    "openai (>=2.16.0,<3.0.0)",
    "pdfminer-six (>=20250506,<20250507)",
    "pip-chill (>=1.0.3,<2.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "py-cpuinfo (>=9.0.0,<10.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "thop (>=0.1.1.post2209072238,<0.2.0)",
    "ultralytics-thop (>=2.0.18,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
